tests/negative/cycle_b.lu
require "godot"
require "cycle_a"

class CycleB
end
